--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
     <div class="image-container">
       <div class="image-card">
         <h2 id="card-title" class="title">Title of image goes here</h2>
-        <img id="card-image" class="image" src="./assets/image-placeholder.jpg" alt="Title of image goes here too" />
+        <img
+          id="card-image"
+          class="image"
+          src="./assets/image-placeholder.jpg"
+          alt="Title of image goes here too"
+        />
         <div class="likes-section">
           <span id="like-count" class="likes">0 likes</span>
           <button id="like-button" class="like-button">♥</button>
@@ -24,7 +29,7 @@
           <li>And replace them with the real ones</li>
           <li>From the server</li>
         </ul>
-        <form id="comment-form" class="comment-form">
+        <form id="comment-form" method="post" class="comment-form">
           <input
             class="comment-input"
             type="text"
